force-app/main/default/objects/ADM__c/fields/PRQ_PaperStockColor_Salmon__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PaperStockColor_Salmon__c</fullName>
    <label>PRQ_PaperStockColor_Salmon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>