force-app/main/default/objects/ADM__c/fields/PRQ_PaperStockColorType__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PaperStockColorType__c</fullName>
    <label>PRQ_PaperStockColorType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Buff</fullName>
            </value>
            <value>
                <fullName>Canary</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Other (Customer Must Supply)</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Salmon</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>