force-app/main/default/objects/ADM__c/fields/PRQ_PaperStockType__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PaperStockType__c</fullName>
    <label>PRQ_PaperStockType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>110lb Index</fullName>
            </value>
            <value>
                <fullName>20lb Bond</fullName>
            </value>
            <value>
                <fullName>28lb Color Copy Digital</fullName>
            </value>
            <value>
                <fullName>60lb Color Copy Digital</fullName>
            </value>
            <value>
                <fullName>60lb Opaque Smooth Finish</fullName>
            </value>
            <value>
                <fullName>65lb Linen Cover</fullName>
            </value>
            <value>
                <fullName>67lb Bristol Cover</fullName>
            </value>
            <value>
                <fullName>80lb Color Copy Digital Cover</fullName>
            </value>
            <value>
                <fullName>80lb Silk Text</fullName>
            </value>
            <value>
                <fullName>Carbonless 2-Part</fullName>
            </value>
            <value>
                <fullName>Carbonless 3-Part</fullName>
            </value>
            <value>
                <fullName>Carbonless 4-Part</fullName>
            </value>
            <value>
                <fullName>Carbonless 5-Part</fullName>
            </value>
            <value>
                <fullName>Client Supplied</fullName>
            </value>
            <value>
                <fullName>Envelopes Standard #10</fullName>
            </value>
            <value>
                <fullName>Envelopes Window #10</fullName>
            </value>
            <value>
                <fullName>Heavyweight Coated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>