force-app/main/default/objects/ADM__c/fields/PRQ_PressWork__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PressWork__c</fullName>
    <label>PRQ_PressWork</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>