force-app/main/default/objects/ADM__c/fields/PRQ_PressWork_DigitalColor__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PressWork_DigitalColor__c</fullName>
    <label>PRQ_PressWork_DigitalColor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>