force-app/main/default/objects/ADM__c/fields/PRQ_PressWork_Printing2Color__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PressWork_Printing2Color__c</fullName>
    <label>PRQ_PressWork_Printing2Color</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>