force-app/main/default/objects/ADM__c/fields/PRQ_PressWorkType__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PressWorkType__c</fullName>
    <label>PRQ_PressWorkType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital (Black and White)</fullName>
            </value>
            <value>
                <fullName>Digital (Color)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Printing Press (2-Color)</fullName>
            </value>
            <value>
                <fullName>Printing Press (Black &amp; White)</fullName>
            </value>
            <value>
                <fullName>Wide Format</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>