force-app/main/default/objects/ADM__c/fields/PRQ_PrintJobCost__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PrintJobCost__c</fullName>
    <label>PRQ_PrintJobCost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>