force-app/main/default/objects/ADM__c/fields/PRQ_PRQBackToBackPrinting__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PRQBackToBackPrinting__c</fullName>
    <label>PRQ_PRQBackToBackPrinting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>