force-app/main/default/objects/ADM__c/fields/PRQ_PRQDesc__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PRQDesc__c</fullName>
    <label>PRQ_PRQDesc</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>