force-app/main/default/objects/ADM__c/fields/PRQ_PRQNoOfCopies__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PRQNoOfCopies__c</fullName>
    <label>PRQ_PRQNoOfCopies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>