force-app/main/default/objects/ADM__c/fields/PRQ_PRQNoOfPages__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PRQNoOfPages__c</fullName>
    <label>PRQ_PRQNoOfPages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>