force-app/main/default/objects/ADM__c/fields/PRQ_PRQOrderNo__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PRQOrderNo__c</fullName>
    <label>PRQ_PRQOrderNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>