force-app/main/default/objects/ADM__c/fields/PRQ_PRQSpecialInstruction__c.field-meta.xml
<CustomField>
    <fullName>PRQ_PRQSpecialInstruction__c</fullName>
    <label>PRQ_PRQSpecialInstruction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>