force-app/main/default/objects/ADM__c/fields/PRQ_ReportingCategory__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ReportingCategory__c</fullName>
    <label>PRQ_ReportingCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>