force-app/main/default/objects/ADM__c/fields/PRQ_ShipToAddress2__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToAddress2__c</fullName>
    <label>PRQ_ShipToAddress2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>