force-app/main/default/objects/ADM__c/fields/PRQ_ShipToBureau__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToBureau__c</fullName>
    <label>PRQ_ShipToBureau</label>
    <length>255</length>
    <type>Text</type>
</CustomField>