force-app/main/default/objects/ADM__c/fields/PRQ_ShipToCellNo__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToCellNo__c</fullName>
    <label>PRQ_ShipToCellNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>