force-app/main/default/objects/ADM__c/fields/PRQ_ShipToCity__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToCity__c</fullName>
    <label>PRQ_ShipToCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>