force-app/main/default/objects/ADM__c/fields/PRQ_ShipToDateNeeded__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToDateNeeded__c</fullName>
    <label>PRQ_ShipToDateNeeded</label>
    <type>DateTime</type>
</CustomField>