force-app/main/default/objects/ADM__c/fields/PRQ_ShipToDivision__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToDivision__c</fullName>
    <label>PRQ_ShipToDivision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>