force-app/main/default/objects/ADM__c/fields/PRQ_ShipToEmail__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToEmail__c</fullName>
    <label>PRQ_ShipToEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>