force-app/main/default/objects/ADM__c/fields/PRQ_ShipToFaxNo__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToFaxNo__c</fullName>
    <label>PRQ_ShipToFaxNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>