force-app/main/default/objects/ADM__c/fields/PRQ_ShipToFirstName__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToFirstName__c</fullName>
    <label>PRQ_ShipToFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>