force-app/main/default/objects/ADM__c/fields/PRQ_ShipToLastName__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToLastName__c</fullName>
    <label>PRQ_ShipToLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>