force-app/main/default/objects/ADM__c/fields/PRQ_ShipToPagerNo__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToPagerNo__c</fullName>
    <label>PRQ_ShipToPagerNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>