force-app/main/default/objects/ADM__c/fields/PRQ_ShipToPhoneExt__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToPhoneExt__c</fullName>
    <label>PRQ_ShipToPhoneExt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>