force-app/main/default/objects/ADM__c/fields/PRQ_ShipToPhoneNo__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToPhoneNo__c</fullName>
    <label>PRQ_ShipToPhoneNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>