force-app/main/default/objects/ADM__c/fields/PRQ_ShipToProgram__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToProgram__c</fullName>
    <label>PRQ_ShipToProgram</label>
    <length>255</length>
    <type>Text</type>
</CustomField>