force-app/main/default/objects/ADM__c/fields/PRQ_ShipToRush__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToRush__c</fullName>
    <label>PRQ_ShipToRush</label>
    <length>255</length>
    <type>Text</type>
</CustomField>