force-app/main/default/objects/ADM__c/fields/PRQ_ShipToSalutations__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToSalutations__c</fullName>
    <label>PRQ_ShipToSalutations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>