force-app/main/default/objects/ADM__c/fields/PRQ_ShipToState__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToState__c</fullName>
    <label>PRQ_ShipToState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>