force-app/main/default/objects/ADM__c/fields/PRQ_ShipToTitle__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToTitle__c</fullName>
    <label>PRQ_ShipToTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>