force-app/main/default/objects/ADM__c/fields/PRQ_ShipToType__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToType__c</fullName>
    <label>PRQ_ShipToType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>