force-app/main/default/objects/ADM__c/fields/PRQ_ShipToZip__c.field-meta.xml
<CustomField>
    <fullName>PRQ_ShipToZip__c</fullName>
    <label>PRQ_ShipToZip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>