force-app/main/default/objects/ADM__c/fields/PRQ_SplitFundingSource__c.field-meta.xml
<CustomField>
    <fullName>PRQ_SplitFundingSource__c</fullName>
    <label>PRQ_SplitFundingSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>