force-app/main/default/objects/ADM__c/fields/PRQ_WorkCategory__c.field-meta.xml
<CustomField>
    <fullName>PRQ_WorkCategory__c</fullName>
    <label>PRQ_WorkCategory</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>