force-app/main/default/objects/ADM__c/fields/PRQ_WorkCategory_Letterhead__c.field-meta.xml
<CustomField>
    <fullName>PRQ_WorkCategory_Letterhead__c</fullName>
    <label>PRQ_WorkCategory_Letterhead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>