force-app/main/default/objects/ADM__c/fields/TRAN_ACName__c.field-meta.xml
<CustomField>
    <fullName>TRAN_ACName__c</fullName>
    <label>TRAN_ACName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>