force-app/main/default/objects/ADM__c/fields/TRAN_ACorAbove__c.field-meta.xml
<CustomField>
    <fullName>TRAN_ACorAbove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRAN_ACorAbove</label>
    <type>Checkbox</type>
</CustomField>