force-app/main/default/objects/ADM__c/fields/TRAN_AssignedBy__c.field-meta.xml
<CustomField>
    <fullName>TRAN_AssignedBy__c</fullName>
    <label>TRAN_AssignedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>