force-app/main/default/objects/ADM__c/fields/TRAN_AverageMiles__c.field-meta.xml
<CustomField>
    <fullName>TRAN_AverageMiles__c</fullName>
    <label>TRAN_AverageMiles</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>