force-app/main/default/objects/ADM__c/fields/TRAN_BudgetCode__c.field-meta.xml
<CustomField>
    <fullName>TRAN_BudgetCode__c</fullName>
    <label>TRAN_BudgetCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>