force-app/main/default/objects/ADM__c/fields/TRAN_Bureau__c.field-meta.xml
<CustomField>
    <fullName>TRAN_Bureau__c</fullName>
    <label>TRAN_Bureau</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bureau</valueSetName>
    </valueSet>
</CustomField>