force-app/main/default/objects/ADM__c/fields/TRAN_Category__c.field-meta.xml
<CustomField>
    <fullName>TRAN_Category__c</fullName>
    <label>TRAN_Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>