force-app/main/default/objects/ADM__c/fields/TRAN_CustomerReceived__c.field-meta.xml
<CustomField>
    <fullName>TRAN_CustomerReceived__c</fullName>
    <label>TRAN_CustomerReceived</label>
    <length>255</length>
    <type>Text</type>
</CustomField>