force-app/main/default/objects/ADM__c/fields/TRAN_CustomerSignature__c.field-meta.xml
<CustomField>
    <fullName>TRAN_CustomerSignature__c</fullName>
    <label>TRAN_CustomerSignature</label>
    <type>DateTime</type>
</CustomField>