force-app/main/default/objects/ADM__c/fields/TRAN_DeliverGroup__c.field-meta.xml
<CustomField>
    <fullName>TRAN_DeliverGroup__c</fullName>
    <label>TRAN_DeliverGroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service Unit</fullName>
            </value>
            <value>
                <fullName>Transportation Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>