force-app/main/default/objects/ADM__c/fields/TRAN_DeliveryItems__c.field-meta.xml
<CustomField>
    <fullName>TRAN_DeliveryItems__c</fullName>
    <label>TRAN_DeliveryItems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deliver item(s) within the same building (from floor to floor)</fullName>
            </value>
            <value>
                <fullName>Transport items/Personnel from building to a separate building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>