force-app/main/default/objects/ADM__c/fields/TRAN_DeliveryPolicy__c.field-meta.xml
<CustomField>
    <fullName>TRAN_DeliveryPolicy__c</fullName>
    <label>TRAN_DeliveryPolicy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Delivery</fullName>
            </value>
            <value>
                <fullName>Special Request (Must justify in &quot;Special Instructions&quot; box below.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>