force-app/main/default/objects/ADM__c/fields/TRAN_Division__c.field-meta.xml
<CustomField>
    <fullName>TRAN_Division__c</fullName>
    <label>TRAN_Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>