force-app/main/default/objects/ADM__c/fields/TRAN_GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>TRAN_GrandTotal__c</fullName>
    <label>TRAN_GrandTotal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>