force-app/main/default/objects/ADM__c/fields/TRAN_HoursSpent__c.field-meta.xml
<CustomField>
    <fullName>TRAN_HoursSpent__c</fullName>
    <label>TRAN_HoursSpent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>