force-app/main/default/objects/ADM__c/fields/TRAN_ItemTotal__c.field-meta.xml
<CustomField>
    <fullName>TRAN_ItemTotal__c</fullName>
    <label>TRAN_ItemTotal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>