force-app/main/default/objects/ADM__c/fields/TRAN_ItemTotalAttachments__c.field-meta.xml
<CustomField>
    <fullName>TRAN_ItemTotalAttachments__c</fullName>
    <label>TRAN_ItemTotalAttachments</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>