force-app/main/default/objects/ADM__c/fields/TRAN_Laborer__c.field-meta.xml
<CustomField>
    <fullName>TRAN_Laborer__c</fullName>
    <label>TRAN_Laborer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>