force-app/main/default/objects/ADM__c/fields/TRAN_MCAssignedBy__c.field-meta.xml
<CustomField>
    <fullName>TRAN_MCAssignedBy__c</fullName>
    <label>TRAN_MCAssignedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>