force-app/main/default/objects/ADM__c/fields/TRAN_MCDate__c.field-meta.xml
<CustomField>
    <fullName>TRAN_MCDate__c</fullName>
    <label>TRAN_MCDate</label>
    <type>DateTime</type>
</CustomField>