force-app/main/default/objects/ADM__c/fields/TRAN_MCDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>TRAN_MCDeliveryDate__c</fullName>
    <label>TRAN_MCDeliveryDate</label>
    <type>DateTime</type>
</CustomField>