force-app/main/default/objects/ADM__c/fields/TRAN_MCOrDriver__c.field-meta.xml
<CustomField>
    <fullName>TRAN_MCOrDriver__c</fullName>
    <label>TRAN_MCOrDriver</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>