force-app/main/default/objects/ADM__c/fields/TRAN_MCSubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>TRAN_MCSubmittedBy__c</fullName>
    <label>TRAN_MCSubmittedBy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>