force-app/main/default/objects/ADM__c/fields/TRAN_MCSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>TRAN_MCSubmittedDate__c</fullName>
    <label>TRAN_MCSubmittedDate</label>
    <type>DateTime</type>
</CustomField>