force-app/main/default/objects/ADM__c/fields/TRAN_MoveCoordinator__c.field-meta.xml
<CustomField>
    <fullName>TRAN_MoveCoordinator__c</fullName>
    <label>TRAN_MoveCoordinator</label>
    <type>DateTime</type>
</CustomField>