force-app/main/default/objects/ADM__c/fields/TRAN_ObjectCode__c.field-meta.xml
<CustomField>
    <fullName>TRAN_ObjectCode__c</fullName>
    <label>TRAN_ObjectCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>