force-app/main/default/objects/ADM__c/fields/TRAN_PickUpLocation__c.field-meta.xml
<CustomField>
    <fullName>TRAN_PickUpLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRAN_PickUpLocation</label>
    <type>Checkbox</type>
</CustomField>