force-app/main/default/objects/ADM__c/fields/TRAN_PrintCustomerName__c.field-meta.xml
<CustomField>
    <fullName>TRAN_PrintCustomerName__c</fullName>
    <label>TRAN_PrintCustomerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>