force-app/main/default/objects/ADM__c/fields/TRAN_ProgramCode__c.field-meta.xml
<CustomField>
    <fullName>TRAN_ProgramCode__c</fullName>
    <label>TRAN_ProgramCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>