force-app/main/default/objects/ADM__c/fields/TRAN_ProjectDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>TRAN_ProjectDeliveryDate__c</fullName>
    <label>TRAN_ProjectDeliveryDate</label>
    <type>DateTime</type>
</CustomField>