force-app/main/default/objects/ADM__c/fields/TRAN_ReceiveLocation__c.field-meta.xml
<CustomField>
    <fullName>TRAN_ReceiveLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRAN_ReceiveLocation</label>
    <type>Checkbox</type>
</CustomField>