force-app/main/default/objects/ADM__c/fields/TRAN_RequestLocation__c.field-meta.xml
<CustomField>
    <fullName>TRAN_RequestLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRAN_RequestLocation</label>
    <type>Checkbox</type>
</CustomField>