force-app/main/default/objects/ADM__c/fields/TRAN_SpecialInstructions__c.field-meta.xml
<CustomField>
    <fullName>TRAN_SpecialInstructions__c</fullName>
    <label>TRAN_SpecialInstructions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>