force-app/main/default/objects/ADM__c/fields/TRAN_TotalMileage__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TotalMileage__c</fullName>
    <label>TRAN_TotalMileage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>