force-app/main/default/objects/ADM__c/fields/TRAN_TransFromAddress2__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromAddress2__c</fullName>
    <label>TRAN_TransFromAddress2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>